src/shmif/arcan_shmif_interop.h

struct arcan_shmif_cont;
struct arcan_event;
/*
 * _wait will block an unspecified time and return:
 * !0 when an event was successfully dequeued and placed in *dst
 *  0 when the shmif_cont is unable to process events (terminal state)
 */
int arcan_shmif_wait(struct arcan_shmif_cont*, struct arcan_event* dst);
/*
 * Provide a text representation useful for logging, tracing and debugging
 * purposes. If dbuf is NULL, a static buffer will be used (so for
 * threadsafety, provide your own).
 */
const char* arcan_shmif_eventstr(
	struct arcan_event* aev, char* dbuf, size_t dsz);
/*
 * calculates a hash of the layout of the shmpage in order to detect subtle
 * compiler mismatches etc.
 */
uint64_t arcan_shmif_cookie(void);
/*
 * The following functions are simple lookup/unpack support functions for
 * argument strings usually passed on the command-line to a newly spawned
 * frameserver in a simple (utf-8) key=value\tkey=value type format.
 */
struct arg_arr {
	char* key;
	char* value;
};
/*
 * Support function for taking a small utf-8 encoded text string on top
 * of [baseev] (will be modified).
 *
 * It will validate and terminate / return false if [msg] fails proper utf-8
 * validation.
 *
 * This is mainly useful for _MESSAGE events on clipboard subsegments for
 * shorter (comparable to non-incr text/utf-8 in X11).
 */
bool arcan_shmif_pushutf8(
	struct arcan_shmif_cont*, struct arcan_event* baseev,
	const char* msg, size_t msg_sz);